// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderWithContentLink render null when reference is not defined 1`] = `
"<div className=\\"headerWithContentLink undefined\\">
  <h1>
    <span className={[undefined]}>
      header undefined
    </span>
  </h1>
  <ContentLink deps={{...}} reference={{...}} iconName=\\"info\\" />
</div>"
`;

exports[`HeaderWithContentLink renders with both text and icon 1`] = `
"<div className=\\"headerWithContentLink undefined\\">
  <h1>
    <span className={[undefined]}>
      header undefined
    </span>
  </h1>
  <ContentLink deps={{...}} reference=\\"for/testing\\" iconName=\\"info\\" />
</div>"
`;

exports[`HeaderWithContentLink renders with heading, secondary text, and icon 1`] = `
"<div className=\\"headerWithContentLink undefined\\">
  <h1>
    <span className={[undefined]}>
      header secondary
    </span>
  </h1>
  <ContentLink deps={{...}} reference=\\"for/testing\\" iconName=\\"info\\" />
</div>"
`;
